--- a/examples/index.html
+++ b/examples/index.html
@@ -16,7 +16,7 @@
     <script type='text/javascript' src="../src/blackholesun.js"></script>
 
   </head>
-  <body>     
+  <body bgcolor="#2d4a50">     
     <div>      
           <center><div id="polarcontainer"></div></center>      
     </div>          
