--- a/examples/index.html
+++ b/examples/index.html
@@ -18,7 +18,7 @@
   </head>
   <body bgcolor="#2d4a50">     
     <div>      
-          <center><div id="polarcontainer"></div></center>      
+          <center><div id="blackholesun"></div></center>      
     </div>          
     <script type='text/javascript' src="js/histogram-start.js"></script>
   </body>
